﻿Pulse Changelog

Pulse-4.5.3
  - Added BaseDataOutputView/VM.
  - Added WpMagDirOutputView/VM to output a special PD6 style message that contains mag and dir of water for selected bins.

Pulse-4.5.2.1
 - Fixed a bug with the DataOutputViewModel to output the data with a <CR><LF>

Pulse-4.5.2
 - Fixed data size in wizard for burst deployments in AdcpSubsystemConfigurationViewModel.
 - In AdcpConfiguration, fixed data size in wizard for burst deployment.
 - Fixed background and foreground colors for the numeric up/down boxes.
 - Added PredictionModel and PredicitonModelInput.
 - Added TCP and UDP server.
 - Added DataOutputView/ViewModel.
 - Added Ship Velocity to ViewDataTextViewModel.

Pulse-4.5.1
 - Added Diagnostic view to main view page.
 - Fixing updating plots to fast.
 - In ViewDataDvlViewModel, fixed Display All data.
 - Fixed Display All.
 - Moved the copyright information to the text file Copyright.txt.
 - Skip the Compass Calibration in the wizard.  Added the compass calibration as a button in the Configuration screen.
 - Added BTIC Installer.
 - In LoadProjectsViewModel, improved the performance of loading a project in ScanProjectAsync().
 - In DeployAdcpViewModel, added Zero Pressure sensor command.
 - In PingModelViewModel, fixed the timing and display.

Pulse-4.5.0
 - Fix a bug with importing and playing back data, where data was missing.
 - In ExportDataViewModel, fix bug when new project is selected an no ensembles are in the project.

Pulse-4.4.17
 - In EnsembleIntervalViewModel, fixed the CEI command only being an integer.
 - Added PredictionModel image to Home page.
 - Added new Playback codec in NavBar playback.

Pulse-4.4.13
 - In ExportDataViewModel, added Velocity Vector export to csv.
 - Fixed background colors in textboxes.
 - Fixed download data button for ethernet.
 - Fixed selecting subsystems in DVL Setup.
 - Maded the default BT mode in Project prediction model Narrowband.

Pulse-4.4.12