@@ -80,6 +80,17 @@
                 <TextBlock Text="Heading Source" Margin="5,15,20,0" FontWeight="Bold" Foreground="{StaticResource PulseFontHighlightColor}" />
                 <ComboBox ItemsSource="{Binding HeadingSourceList}" SelectedValue="{Binding SelectedHeadingSource}" Margin="5,0,20,5" MinWidth="75" Foreground="White" ToolTip="{Binding GpsHeadingTooltip}" />
 
+                <TextBlock Text="Remove Ship Speed" Margin="5,15,20,0" FontWeight="Bold" Foreground="{StaticResource PulseFontHighlightColor}" />
+                <CheckBox HorizontalAlignment="Left" Margin="5, 2"  Content="" Foreground="#FFC5CFD1" IsChecked="{Binding Path=IsRemoveShipSpeed}" Style="{StaticResource OnOffSwitchStyle}" ToolTip="{Binding RemoveShipSpeedTooltip}" />
+                <StackPanel Orientation="Horizontal" Margin="5,0">
+                    <TextBlock Text="Use Bottom Track" Margin="5" Foreground="{StaticResource PulseFontColor}" />
+                    <CheckBox HorizontalAlignment="Left" Margin="5, 2"  Content="" Foreground="#FFC5CFD1" IsChecked="{Binding Path=IsRemoveShipSpeed}" Style="{StaticResource OnOffSwitchStyle}" ToolTip="{Binding RemoveShipSpeedTooltip}" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="5,0">
+                    <TextBlock Text="Use GPS Speed    " Margin="5" Foreground="{StaticResource PulseFontColor}" />
+                    <CheckBox HorizontalAlignment="Left" Margin="5, 2"  Content="" Foreground="#FFC5CFD1" IsChecked="{Binding Path=IsRemoveShipSpeed}" Style="{StaticResource OnOffSwitchStyle}" ToolTip="{Binding RemoveShipSpeedTooltip}" />
+                </StackPanel>
+
                 <TextBlock Text="Water Track Options" Margin="5,15,20,0" FontWeight="Bold" Foreground="{StaticResource PulseFontHighlightColor}" />
                 <CheckBox HorizontalAlignment="Left" Margin="5, 2"  Content="" Foreground="#FFC5CFD1" IsChecked="{Binding Path=IsCalculateWaterTrack}" Style="{StaticResource OnOffSwitchStyle}" ToolTip="{Binding WaterTrackTooltip}" />
                 <StackPanel Orientation="Horizontal">
